test/corpus/array_operations.txt
================================================================================
Array access with bracket notation
================================================================================

{{ items[0] }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (array_access
        array: (identifier)
        index: (number)))))

================================================================================
Array access with variable key
================================================================================

{{ items[key] }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (array_access
        array: (identifier)
        index: (identifier)))))

================================================================================
Take clause
================================================================================

{{ items take(5) }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (take_clause
          (number))))))

================================================================================
Skip clause
================================================================================

{{ items skip(10) }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (skip_clause
          (number))))))

================================================================================
Pluck clause
================================================================================

{{ items pluck('name') }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (pluck_clause
          (string))))))

================================================================================
Where clause
================================================================================

{{ items where(active == true) }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (where_clause
          (binary_expression
            (identifier)
            (boolean)))))))

================================================================================
Merge operation
================================================================================

{{ items merge other_items }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))
