test/corpus/assignments.txt
================================================================================
Simple assignment
================================================================================

{{ total = 0 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (assignment
        left: (identifier)
        right: (number)))))

================================================================================
Assignment with addition
================================================================================

{{ total += 5 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (assignment
        left: (identifier)
        right: (number)))))

================================================================================
Assignment with subtraction
================================================================================

{{ count -= 1 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (assignment
        left: (identifier)
        right: (number)))))

================================================================================
String assignment
================================================================================

{{ greeting = 'Hello World' }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (assignment
        left: (identifier)
        right: (string)))))

================================================================================
Assignment with expression
================================================================================

{{ result = 5 + 3 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (assignment
        left: (identifier)
        right: (binary_expression
          (number)
          (number))))))

================================================================================
Multiple statements with semicolon
================================================================================

{{ x = 1; y = 2 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (assignment
        left: (identifier)
        right: (number))
      (assignment
        left: (identifier)
        right: (number)))))
