test/corpus/closing_tags.txt
================================================================================
Closing tags with colons
================================================================================

{{ push:scripts }}
  <script src="app.js"></script>
{{ /push:scripts }}

{{ /collection:blog }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (variable
        (identifier)
        (identifier))))
  (text)
  (antlers_node
    (closing_tag
      (identifier)
      (identifier)))
  (text)
  (antlers_node
    (closing_tag
      (identifier)
      (identifier))))
