test/corpus/comments.txt
================================================================================
Simple comment
================================================================================

{{# This is a comment #}}

--------------------------------------------------------------------------------

(template
  (comment
    (comment_content)))

================================================================================
Empty comment
================================================================================

{{##}}

--------------------------------------------------------------------------------

(template
  (comment))
