test/corpus/conditionals.txt
================================================================================
Simple if tag
================================================================================

{{ if show_title }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (conditional
      condition: (identifier))))

================================================================================
If with comparison
================================================================================

{{ if count > 5 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (conditional
      condition: (binary_expression
        (identifier)
        (number)))))

================================================================================
Elseif clause
================================================================================

{{ elseif status == 'active' }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (elseif_clause
      condition: (binary_expression
        (identifier)
        (string)))))

================================================================================
Else clause
================================================================================

{{ else }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (else_clause)))

================================================================================
Unless tag
================================================================================

{{ unless is_hidden }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (unless
      condition: (identifier))))

================================================================================
If with logical operators
================================================================================

{{ if is_admin && is_active }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (conditional
      condition: (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Closing if tag
================================================================================

{{ /if }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (closing_tag
      (identifier))))

================================================================================
Closing unless tag
================================================================================

{{ /unless }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (closing_tag
      (identifier))))
