test/corpus/literals.txt
================================================================================
String with single quotes
================================================================================

{{ 'hello world' }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (string))))

================================================================================
String with double quotes
================================================================================

{{ "hello world" }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (string))))

================================================================================
Integer number
================================================================================

{{ 42 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (number))))

================================================================================
Decimal number
================================================================================

{{ 3.14 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (number))))

================================================================================
Boolean true
================================================================================

{{ true }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (boolean))))

================================================================================
Boolean false
================================================================================

{{ false }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (boolean))))

================================================================================
Null value
================================================================================

{{ null }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (null))))

================================================================================
Array literal
================================================================================

{{ [1, 2, 3] }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (array
        (number)
        (number)
        (number)))))

================================================================================
Array with key-value pairs
================================================================================

{{ ['key' => 'value'] }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (array
        (array_pair
          key: (string)
          value: (string))))))
