test/corpus/mixed.txt
================================================================================
Text with variable
================================================================================

Hello {{ name }}!

--------------------------------------------------------------------------------

(template
  (text)
  (antlers_node
    (statement_list
      (identifier)))
  (text))

================================================================================
HTML with Antlers
================================================================================

<h1>{{ title }}</h1>

--------------------------------------------------------------------------------

(template
  (text)
  (antlers_node
    (statement_list
      (identifier)))
  (text))

================================================================================
Multiple Antlers nodes
================================================================================

{{ greeting }} {{ name }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (identifier)))
  (text)
  (antlers_node
    (statement_list
      (identifier))))
