test/corpus/operators.txt
================================================================================
Addition
================================================================================

{{ 5 + 3 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (number)
        (number)))))

================================================================================
Subtraction
================================================================================

{{ 10 - 4 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (number)
        (number)))))

================================================================================
Multiplication
================================================================================

{{ 6 * 7 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (number)
        (number)))))

================================================================================
Division
================================================================================

{{ 20 / 4 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (number)
        (number)))))

================================================================================
Modulo
================================================================================

{{ 10 % 3 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (number)
        (number)))))

================================================================================
Equality
================================================================================

{{ a == b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Strict equality
================================================================================

{{ a === b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Not equal
================================================================================

{{ a != b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Less than
================================================================================

{{ a < b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Greater than
================================================================================

{{ a > b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Spaceship operator
================================================================================

{{ a <=> b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Logical AND with symbols
================================================================================

{{ a && b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Logical AND with keyword
================================================================================

{{ a and b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Logical OR with symbols
================================================================================

{{ a || b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Logical OR with keyword
================================================================================

{{ a or b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Logical XOR
================================================================================

{{ a xor b }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Logical NOT
================================================================================

{{ !a }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (unary_expression
        (identifier)))))

================================================================================
Unary minus
================================================================================

{{ -5 }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (unary_expression
        (number)))))

================================================================================
Null coalescence
================================================================================

{{ title ?? 'Default' }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (null_coalescence
        (identifier)
        (string)))))

================================================================================
Gatekeeper operator
================================================================================

{{ show_bio ?= author_bio }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (gatekeeper
        (identifier)
        (identifier)))))

================================================================================
Ternary expression
================================================================================

{{ is_sold ? 'sold' : 'for sale' }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (ternary_expression
        condition: (identifier)
        consequence: (string)
        alternative: (string)))))
