test/corpus/php.txt
================================================================================
PHP statement
================================================================================

{{? $var = 'test'; ?}}

--------------------------------------------------------------------------------

(template
  (php_statement
    (php_content)))

================================================================================
PHP echo
================================================================================

{{$ route('home') $}}

--------------------------------------------------------------------------------

(template
  (php_echo
    (php_echo_content)))
