test/corpus/variables.txt
================================================================================
Simple variable
================================================================================

{{ title }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (identifier))))

================================================================================
Variable with colon notation
================================================================================

{{ mailing_address:city }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (variable
        (identifier)
        (identifier)))))

================================================================================
Variable with dot notation
================================================================================

{{ mailing_address.city }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (variable
        (identifier)
        (identifier)))))

================================================================================
Deeply nested variable
================================================================================

{{ user:profile:settings:theme }}

--------------------------------------------------------------------------------

(template
  (antlers_node
    (statement_list
      (variable
        (identifier)
        (identifier)
        (identifier)
        (identifier)))))
